Implemented handler for entity framework

--- a/NoteApi/appsettings.Development.json
+++ b/NoteApi/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Default": "Server=localhost;User ID=db_user;Password=db_user_pass;Database=app_db"
   }
 }
