Started work to have backend talk with frontend

--- a/NoteApi/appsettings.Development.json
+++ b/NoteApi/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "Default": "Server=localhost;User ID=db_user;Password=db_user_pass;Database=app_db"
-  }
+  },
+  "AllowedHosts": "*"
 }
